# GlobalMarketAnalyzer

./: .env.example  .gitignore  API_financial.py  DIARY.md  MATHEMATICS.md  README.md  all_signals.csv  analisis_portfolio.py  backtest.py  backtest_engine.py  backtest_full_output.txt  backtest_results.json  brain.db  bridge_server.py  calibration_results.json  capital_field.py  codigo_exportacion_nb.txt  comprehensive_backtest.py  config.py  correlation_monitor.py  crisis_backtest_results.json  crisis_detection_results.csv  crossval_full.py  crossval_s_vix.py  crossval_train_test_results.json  daily_advisor.py  data_ingestion.py  database_manager.py  datos_acciones.csv  demo_strategies.py  demo_strategies.py.bak  economist_engine.py  factor_analyzer.py  fundamental_analyst.py  fundamental_filter.py  graph_builder.py  heat_engine.py  historical_tests.py  inertia_detector.py  macro_flow_analyzer.py  (+33 more)
automation/: install_daemon.py  install_service.py
core/: __init__.py  capital_field.py  fundamental_filter.py  graph_builder.py  heat_engine.py  regime_calibrator.py  reversibility.py  ukf.py
dashboard/: _demo_template.html  api.py  data_pipeline.py  generate_demo.py
db/: __init__.py  data_ingestion.py  database_manager.py  fred_client.py  schema.sql
docs/: ARCHITECTURE.md  DASHBOARD_GUIDE.md  DIARY.md  LLM_BACKTEST_PROMPTS.md  MATHEMATICS.md  STRATEGY_DIAGNOSTIC.md
logs/: launchd.err
ml/: changepoint.py  combined_strategy.py  factor_timing.py  fundamental_momentum.py  graph_vs_macro.py  graph_vs_macro_v2.py  lgbm_direction.py  market_timing.py  multi_target.py  (+4 more)
(+38 files in other folders)
