[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "global-market-analyzer"
version = "1.0.0"
description = "Quantitative market analyzer — O-U graph model, HMM regime detection, Markowitz optimization, LightGBM direction predictor"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ml*", "strategy*", "dashboard*", "db*"]
